Frontend Link table

--- a/web-ui/src/app/layout/landing/landing.component.html
+++ b/web-ui/src/app/layout/landing/landing.component.html
@@ -1,4 +1,11 @@
-<section>
-  <p>landing works!</p>
+<section class="text-center p-5 m-3 d-flex flex-column">
+  <p class="p-3">
+    This application allows you to scrap web page for keywords and then tag page url with scraped suggestions.
+  </p>
+  <p class="p-3">
+    You can store Tagged URLs as your own Links which you can manage later.
+  </p>
+
+  <span class="p-3">To begin you need to Sign In.</span>
 </section>
 
