--- a/web-ui/src/app/modules/home/home/home.component.html
+++ b/web-ui/src/app/modules/home/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="p-3">
+  <button mat-raised-button color="primary">Create Link...</button>
+</div>
+
+<span class="p-3">Your Links:</span>
+<app-link-list></app-link-list>
