Create link component

--- a/web-ui/src/app/modules/home/view/home.component.html
+++ b/web-ui/src/app/modules/home/view/home.component.html
@@ -1,5 +1,5 @@
 <div class="p-3">
-  <button mat-raised-button color="primary">Create Link...</button>
+  <a mat-raised-button color="primary" routerLink="new">Create Link...</a>
 </div>
 
 <span class="p-3">Your Links:</span>
