--- a/web-ui/src/app/modules/home/view/link-view/link-view.component.html
+++ b/web-ui/src/app/modules/home/view/link-view/link-view.component.html
@@ -1,4 +1,7 @@
 <div class="p-3 mat-elevation-z3">
+  <p>URL:</p>
   <p>{{link.pageURL}}</p>
-  <span>{{tagsText}}</span>
+  <br>
+  <p>Tags:</p>
+  <p>{{tagsText}}</p>
 </div>
