--- a/web-ui/src/app/modules/home/view/link-view/link-view.component.html
+++ b/web-ui/src/app/modules/home/view/link-view/link-view.component.html
@@ -1,7 +1,12 @@
 <div class="p-3 mat-elevation-z3">
-  <p>URL:</p>
-  <p>{{link.pageURL}}</p>
+  <p><b>{{link.title}}</b></p>
+  <a [href]="link.pageURL" target="_blank">{{link.pageURL}}</a>
+  <br>
   <br>
   <p>Tags:</p>
-  <p>{{tagsText}}</p>
+  <mat-chip-list>
+    <mat-chip *ngFor="let tag of link.tags" [value]="tag">
+      {{tag}}
+    </mat-chip>
+  </mat-chip-list>
 </div>
