Link dateCreated and title

--- a/web-ui/src/app/modules/home/view/home.component.html
+++ b/web-ui/src/app/modules/home/view/home.component.html
@@ -1,1 +1,5 @@
+<div class="p-3">
+  <a mat-raised-button color="primary" (click)="openCreateLinkDialog()">Create Link...</a>
+</div>
+
 <app-link-list></app-link-list>
