--- a/web-ui/src/app/modules/home/manage/create-link/create-link-dialog/create-link-dialog.component.html
+++ b/web-ui/src/app/modules/home/manage/create-link/create-link-dialog/create-link-dialog.component.html
@@ -17,12 +17,14 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <app-chips-multi-select [options]="suggestions" (selectedItemsEvent)="tagsSelected($event)"></app-chips-multi-select>
+  <app-chips-multi-select title="Keywords" [options]="keywords" (selectedItemsEvent)="tagsSelected($event)"></app-chips-multi-select>
+
+  <app-chips-multi-select title="Tags" [options]="tags" (selectedItemsEvent)="tagsSelected($event)"></app-chips-multi-select>
 
 </mat-dialog-content>
 
 <mat-dialog-actions class="justify-content-end">
   <button class="mat-raised-button mx-3"(click)="close()">Close</button>
-  <button class="mat-raised-button mx-3 mat-primary"(click)="save()" [disabled]="!link?.tags.length">Save</button>
+  <button class="mat-raised-button mx-3 mat-primary"(click)="save()" [disabled]="!selection.size">Save</button>
 </mat-dialog-actions>
 </div>
